# powerAndlcd1602ForOrangePI

./: .example.cpp.swp  CMakeLists.txt  README.md  compileAndRun.sh
displayManagement/: autostart.service  script.cpp
powerManagement/: autostart.service  script.cpp
